[workspace]
members = ["hub-runtime"]
resolver = "2"

[workspace.dependencies]
api_version = { git = "https://github.com/tidbcloud/cloud-storage-engine.git", branch = "cloud-engine" }
builtin_dfs = { git = "https://github.com/tidbcloud/cloud-storage-engine.git", branch = "cloud-engine" }
cloud_encryption = { git = "https://github.com/tidbcloud/cloud-storage-engine.git", branch = "cloud-engine" }
keys = { git = "https://github.com/tidbcloud/cloud-storage-engine.git", branch = "cloud-engine" }
kvengine = { git = "https://github.com/tidbcloud/cloud-storage-engine.git", branch = "cloud-engine" }
kvenginepb = { git = "https://github.com/tidbcloud/cloud-storage-engine.git", branch = "cloud-engine" }
pd_client = { git = "https://github.com/tidbcloud/cloud-storage-engine.git", branch = "cloud-engine", default-features = false }
security = { git = "https://github.com/tidbcloud/cloud-storage-engine.git", branch = "cloud-engine", default-features = false }
tikv_util = { git = "https://github.com/tidbcloud/cloud-storage-engine.git", branch = "cloud-engine" }

[patch.crates-io]
raft = { git = "https://github.com/tikv/raft-rs", branch = "master" }
raft-proto = { git = "https://github.com/tikv/raft-rs", branch = "master" }
protobuf = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }
protobuf-codegen = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }
fs2 = { git = "https://github.com/tikv/fs2-rs", branch = "tikv" }
sysinfo = { git = "https://github.com/tikv/sysinfo", branch = "0.26-fix-cpu" }
tokio-executor = { git = "https://github.com/tikv/tokio", branch = "tokio-timer-hotfix" }
lindera = { git = "https://github.com/breezewish/lindera", branch = "v0.43.1-tokio-1.24" }
tantivy = { git = "https://github.com/breezewish/tikv-tantivy.git", branch = "patch-0.22.1" }
pprof = { git = "https://github.com/tikv/pprof-rs.git", rev = "01cff82dbe6fe110a707bf2b38d8ebb1d14a18f8" }
kvproto = { git = "https://github.com/pingcap/kvproto.git" }
tipb = { git = "https://github.com/pingcap/tipb.git" }

# cloud-storage-engine now is private. We add it as a submodule to workaround
# image release issue for building tiflash-columnar-hub in internal CD pipeline.
[patch."https://github.com/tidbcloud/cloud-storage-engine.git"]
api_version = { path = "../cloud-storage-engine/components/api_version" }
builtin_dfs = { path = "../cloud-storage-engine/components/builtin_dfs" }
cloud_encryption = { path = "../cloud-storage-engine/components/cloud_encryption" }
keys = { path = "../cloud-storage-engine/components/keys" }
kvengine = { path = "../cloud-storage-engine/components/kvengine" }
kvenginepb = { path = "../cloud-storage-engine/components/kvenginepb" }
pd_client = { path = "../cloud-storage-engine/components/pd_client" }
security = { path = "../cloud-storage-engine/components/security" }
tikv_util = { path = "../cloud-storage-engine/components/tikv_util" }

# cloud-storage-engine's generated workspace-hack currently forces
# tikv-jemalloc-* into every consumer. That is fine for standalone
# binaries, but this repository builds a cdylib that is loaded into the
# TiFlash process, so re-exporting another malloc/free implementation
# from the shared object causes allocator conflicts at runtime.
workspace-hack = { path = "workspace-hack" }
